# app/controllers/application_controller.rb
@@ -1,12 +1,12 @@
 # frozen_string_literal: true
 
 class ApplicationController < ActionController::API
-  # before_action :authenticate_user!
+  before_action :authenticate!
   before_action :configure_permitted_parameters, if: :devise_controller?
 
   protected
 
-  def authenticate_user!
+  def authenticate!
     return if admin_signed_in? || member_signed_in?
 
     render json: { error: 'Unauthorized' }, status: :unauthorized
